fixed issue where indicator wasn't displaying on Tablet and Mobile

--- a/components/NetworkPage/BoardFeatures/BoardFeatures.module.scss
+++ b/components/NetworkPage/BoardFeatures/BoardFeatures.module.scss
@@ -69,9 +69,9 @@
   background: $blue--2 !important;
 }
 
-.light .tabs-wrapper>div>span {
-  background: $blue--3 !important;
-}
+// .light .tabs-wrapper>div>span {
+//   background: $blue--3 !important;
+// }
 
 .tab {
   font-family: 'Montserrat', serif !important;
