--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -290,15 +290,6 @@ button {
   color: $ln-blue !important;
 }
 
-.MuiTabs-indicator {
-  display: none;
-  // background: $ln-blue !important;
-  // display: block;
-  // width: 18% !important;
-  // left: 10% !important;
-  // transform: translateX(2rem);
-}
-
 .app-preview .MuiTabs-flexContainer {
   justify-content: center;
 }
